// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item default 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c1:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item disabled 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B pointer-events:none;
}

.c1:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item selected 1`] = `
.c4 {
  padding-left: 8px;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c1:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList List with different arrow positions 1`] = `
.c13 {
  padding-left: 8px;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  position: relative;
  position: relative;
}

.c4::before {
  content: '';
  display: block;
  width: 100%;
  height: 52px;
  position: absolute;
  left: 0;
  pointer-events: none;
  background: transparent;
  z-index: 1;
  opacity: 0;
  top: 0;
  background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
}

.c4::after {
  content: '';
  display: block;
  width: 100%;
  height: 52px;
  position: absolute;
  left: 0;
  pointer-events: none;
  background: transparent;
  z-index: 1;
  opacity: 0;
  bottom: 0;
  background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  overflow-y: auto;
}

.c6 {
  position: relative;
  overflow-x: hidden;
}

.c16 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c7 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c9:hover {
  background: #F5F5F5;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c11:hover {
  background: #F5F5F5;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B pointer-events:none;
}

.c15:hover {
  background: #F5F5F5;
}

.c10 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c3:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c3:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c17 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c17:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c17:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c18 {
  position: relative;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  padding-top: 12px;
  padding-bottom: 12px;
  width: 300px;
}

.c18:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c18:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Default (right)
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              />
              <span
                className="c8 c9"
              >
                <span
                  className="c10"
                >
                  Default?
                </span>
              </span>
              <span
                className="c8 c11"
              >
                <span
                  className="c10"
                >
                  First
                </span>
                <div
                  className="c12"
                >
                  <div
                    className="c13"
                  >
                    <svg
                      aria-hidden="true"
                      className="c14"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c8 c9"
              >
                <span
                  className="c10"
                >
                  SecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecond
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Left
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c17"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              />
              <span
                className="c8 c9"
              >
                <span
                  className="c10"
                >
                  Default?
                </span>
              </span>
              <span
                className="c8 c11"
              >
                <span
                  className="c10"
                >
                  First
                </span>
                <div
                  className="c12"
                >
                  <div
                    className="c13"
                  >
                    <svg
                      aria-hidden="true"
                      className="c14"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Center
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 c18"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              />
              <span
                className="c8 c9"
              >
                <span
                  className="c10"
                >
                  Default?
                </span>
              </span>
              <span
                className="c8 c11"
              >
                <span
                  className="c10"
                >
                  First
                </span>
                <div
                  className="c12"
                >
                  <div
                    className="c13"
                  >
                    <svg
                      aria-hidden="true"
                      className="c14"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="c8 c9"
              >
                <span
                  className="c10"
                >
                  Second
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <span
                className="c8 c15"
              >
                <span
                  className="c10"
                >
                  Disabled
                </span>
              </span>
              <div
                className="c16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
